feat: add password reset

--- a/.env
+++ b/.env
@@ -6,3 +6,12 @@
 
 DATABASE_URL="postgresql://root:strong@localhost:5432/mlv?schema=public"
 DATABASE_TEST_URL="postgresql://root:strong@localhost:5432/mlv_test?schema=public"
+
+# mail
+MAIL_HOST=smtp.office365.com
+MAIL_USER=test-mlv@outlook.fr
+MAIL_PASSWORD=nathan-cuvelier
+MAIL_FROM=test-mlv@outlook.fr
+
+# optional
+MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
