--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-ws": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
