--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-ws": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
