--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express-session": "^1.17.3",
+    "fluent-ffmpeg": "^2.1.2",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
