--- a/.env
+++ b/.env
@@ -15,3 +15,19 @@ MAIL_FROM=test-mlv@outlook.fr
 
 # optional
 MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
+
+
+# optional
+
+#aws s3
+AWS_S3_BUCKET=mlv
+AWS_S3_REGION=eu-west-3
+AWS_S3_ACCESS_KEY_ID=AKIAQR4CCEL6ACNHEXGW
+AWS_S3_SECRET_ACCESS_KEY=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
+AWS_S3_ENDPOINT=http://localhost:9000
+AWS_S3_USE_SSL=false
+AWS_S3_FORCE_PATH_STYLE=true
+AWS_S3_SIGNATURE_VERSION=v4
+AWS_S3_ACL=public-read
+AWS_S3_URL=http://localhost:9000/mlv
+AWS_S3_PUBLIC_URL=http://localhost:9000/mlv r
