--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^6.10.1",
+    "@fastify/view": "^7.4.1",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -27,16 +29,19 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.1",
     "@nestjs/platform-ws": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.10.1",
+    "aws-sdk": "^2.1404.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.8",
+    "ejs": "^3.1.9",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
+    "hbs": "^4.2.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -45,6 +50,9 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sharp": "^0.31.3",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "socketio": "^1.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -54,6 +62,7 @@
     "@compodoc/compodoc": "^1.1.19",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
+    "@nestjs/platform-fastify": "^9.4.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.3.9",
     "@types/express": "^4.17.13",
@@ -72,7 +81,7 @@
     "jest": "^29.4.3",
     "jest-junit": "^15.0.0",
     "prettier": "^2.3.2",
-    "prisma": "^4.10.1",
+    "prisma": "^4.14.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
