--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
 
 #aws s3
 AWS_S3_BUCKET=mlv
+AWS_S3_BUCKET_NAME=mlvimage-1
 AWS_S3_REGION=eu-west-3
 AWS_S3_ACCESS_KEY_ID=AKIAQR4CCEL6ACNHEXGW
 AWS_S3_SECRET_ACCESS_KEY=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
@@ -30,4 +31,4 @@ AWS_S3_FORCE_PATH_STYLE=true
 AWS_S3_SIGNATURE_VERSION=v4
 AWS_S3_ACL=public-read
 AWS_S3_URL=http://localhost:9000/mlv
-AWS_S3_PUBLIC_URL=http://localhost:9000/mlv r
+
